@@ -3,6 +3,8 @@ Revision history for Graphics-Primitive
 0.14
   - TextBox: handle text layout with Text::Flow
   - Component: coercion of Insets from ArrayRef and Num 
+  - Add pop_component to Container for removing the last component.
+  - POD updates
 
 0.13
   - Reorganize prepare/pack/draw API to be handled by the Driver
